# $Id: configure.in,v 1.21 2005/04/23 10:19:31 smoli Exp $
# ===========================================================================
#
# GNU autoconf template for shish
#
# initialize autoconf (require version 2.5x)
# ---------------------------------------------------------------------------
AC_PREREQ([2.50])
AC_INIT([shish], [0.7-pre3])

# check for compiling modes
# ---------------------------------------------------------------------------
AC_CHECK_COLOR

# set some info stuff
# ---------------------------------------------------------------------------
AC_SET_ARGS

# set directories
# ---------------------------------------------------------------------------
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_SRCDIR([src/sh/sh_main.c])
# dnl AC_CONFIG_AUX_DIR([autoconf])

# check host and target
# ---------------------------------------------------------------------------
# dnl AC_CANONICAL_HOST
# dnl AC_CANONICAL_TARGET

# check for programs needed to build shish
# ---------------------------------------------------------------------------
AC_DIETLIBC([/opt/diet /usr/diet])
AC_PROG_CC([cc gcc])
AC_PROG_AR
AC_PROG_RANLIB
AC_PROG_INSTALL

# check for operating system features
# ---------------------------------------------------------------------------
AC_C_INLINE
AC_FUNC_ALLOCA

dnl AC_CHECK_LIB([owfat], [array_allocate])
dnl AC_CHECK_TERMIOS

dnl AC_FUNC_POLL([cp $srcdir/iopause.h2 iopause.h], [cp $srcdir/iopause.h1 iopause.h])
dnl AC_FUNC_EPOLL
dnl AC_FUNC_KQUEUE
dnl AC_FUNC_SELECT([cp $srcdir/select.h2 select.h], [cp $srcdir/select.h1 select.h])
dnl AC_FUNC_SENDFILE
dnl AC_FUNC_DEVPOLL
dnl AC_TYPE_SOCKLEN
dnl AC_IPV6
dnl AC_SCOPE_ID
dnl AC_CHECK_N2I

# set debugging stuff after compiler test (-Werror could fuck it up)
# ---------------------------------------------------------------------------
AC_CHECK_DEP
AC_CHECK_DEBUG
AC_CHECK_MAINTAINER

# check for needed types
# ---------------------------------------------------------------------------

# library subdirectories
# ---------------------------------------------------------------------------
dnl AC_CONFIG_LIBRARIES([lib/libshish])
dnl AC_CONFIG_PROGRAMS([src/shish], [lib/libshish.a])

AC_CONFIG_FILES([
Makefile
config.mk
build.mk
doc/Makefile
doc/man/Makefile
doc/posix/Makefile
lib/Makefile
lib/buffer/Makefile
lib/byte/Makefile
lib/fmt/Makefile
lib/mmap/Makefile
lib/open/Makefile
lib/scan/Makefile
lib/shell/Makefile
lib/str/Makefile
lib/stralloc/Makefile
lib/uint32/Makefile
scripts/Makefile
src/Makefile
src/builtin/Makefile
src/debug/Makefile
src/eval/Makefile
src/exec/Makefile
src/expand/Makefile
src/fd/Makefile
src/fdstack/Makefile
src/fdtable/Makefile
src/history/Makefile
src/job/Makefile
src/parse/Makefile
src/prompt/Makefile
src/redir/Makefile
src/sh/Makefile
src/sig/Makefile
src/source/Makefile
src/term/Makefile
src/tree/Makefile
src/var/Makefile
src/vartab/Makefile])

AC_CONFIG_STATUS

# be verbose :)
# ---------------------------------------------------------------------------
AC_SUMMARIZE([prefix bindir sysconfdir],
             [COLOR DEP DEBUG | CC CFLAGS LDFLAGS LIBS],
             "%20s: %s")
